[package]
name = "asq"
version = "0.0.1"
authors = ["Esa Turtiainen <esa@turtiainen.eu>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
exitcode = "1.1.2"
reqwest = { version = "0.10.1", features= ["blocking"]}
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
